2010-11-08  John W. Eaton  <jwe@octave.org>

	* configure.ac (--without-opengl): New configure option.

2010-11-03  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include copysign in the list.

2010-10-28  Rik  <octave@nomad.inbox5.com>

	* NEWS: Update deprecated function list with autocov and autocor.

2010-10-25  Kai Habel  <kai.habel@gmx.de>

	* NEWS: Add uimenu.

2010-10-24  Rik  <octave@nomad.inbox5.com>

	* NEWS: Update deprecated function list for version 3.4.

2010-10-22  John W. Eaton  <jwe@octave.org>

	* Makefile.am (EXTRA_DIST): Include bootstrap and bootstrap.conf
	in the list.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.53+.

2010-10-19  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.53.
	(OCTAVE_API_VERSION_NUMBER): Now 41.
	(OCTAVE_RELEASE_DATE): Now 2010-10-19.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* examples/make_int.cc (Fmake_int): Don't pass arg to mlock.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* examples/structdemo.cc (Fstructdemo): Use octave_scalar_map
	instead of Octave_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* configure.ac: Style fixes.

2010-09-29  John P. Swensen  <jpswensen@gmail.com>

	* configure.ac: Allow selection of GraphicsMagick or ImageMagick
	at configure time using "--with-magick=" option.

2010-09-24  Jaroslav Hajek  <highegg@gmail.com>

	* m4/ax_blas.m4: Update.

2010-09-23  John W. Eaton  <jwe@octave.org>

	* octave-bug.in, octave-bug.cc.in: Delete
	* Makefile.am (EXTRA_DIST): Remove them from the list.
	(bin_PROGRAMS): Remove octave-bug from the list.
	(octave_bug_SOURCES, nodist_octave_bug_SOURCES): Delete variables.
	(BUILT_SOURCES): Remove octave-bug.cc from the list.
	(bin_SCRIPTS): Remove octave-bug from the list.
	(octave-bug.cc, octave-bug): Delete rules.

2010-09-20  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include mktime in the list.
