@@ -1,3 +1,9 @@
+2010-11-09  John W. Eaton  <jwe@octave.org>
+
+	* lo-mappers.cc (xmod, xrem): New functions.
+	(mod): Delete.
+	* lo-mappers.h (xmod, xrem): Provide decls.
+
 2010-10-31  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* dim-vector.h (class dim_vector): tag with OCTAVE_API.
